Fix the spelling of copyright

--- a/index.html
+++ b/index.html
@@ -77,6 +77,6 @@
       <a href="https://github.com/Katiacrisci">Github</a>
       <a href="https://www.linkedin.com/in/caterina-crisci-471406267/">Linkedin</a>
     </main>
-    <footer id="footer">Copiright Caterina Crisci</footer>
+    <footer id="footer">Copyright Caterina Crisci</footer>
   </body>
 </html>
