--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Caterina Crisci</title>
     <style>
       img {
-        width: 50%;
+        width: 15%     
       }
       table,
       td {
@@ -28,8 +28,7 @@
       <a href="#">
         <img
           src="https://github.com/Katiacrisci/Aboutme/blob/main/Images/IMG_20210704_184947_687.jpg?raw=true"
-          alt="una mia foto"
-      /></a>
+          alt="una mia foto"/> </a>
       <p>
         Mi presento, sono Caterina Crisci, ho 24 anni, e attualmente vivo in Olanda, a Rotterdam. Sono laureata in
         Scienze politiche, e ora sto seguendo un corso da front-end developer
